--- a/styles.css
+++ b/styles.css
@@ -66,13 +66,17 @@ color: orange;
 text-align: center;
 font-size: 20px;
 }
+
 .life2{
 	text-align: center;
+
 }
+
 .life{
 	text-align: center;
+	
 }
-}
+
 .visuals{
 	color: white;
 }
@@ -81,9 +85,32 @@ font-size: 20px;
 }
 .visuals h4{
 	color: orange;
+	font-size: 19px;
 }
 .visuals li{
 	color: white;
 	text-align: center;
 
+}
+.culture{
+	color: white;
+
+}
+.culture ol{
+	color: orange;
+}
+.fruits{
+	padding-bottom: : 500px;
+	position: absolute;
+	color: white
+}
+.laptop{
+	padding-left:500px;
+	position: absolute;
+	color: white;
+}
+.palm{
+	padding-left: 950px;
+	position: absolute;
+	color: white;
 }
