--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ header nav ul li a:hover{
 }
 h2{
 	text-align: center;
-	color: orange;
+	color: deeppink;
 }
 .intron h1{
 	text-align: center;
@@ -62,13 +62,13 @@ h2{
 }
 .home h1{
 	text-align: center;
-	color: orange;
+	color: deeppink;
 }
 .home h3{
-	color: orange;
+	color: deeppink;
 }
 .home ul{
-color: orange;
+color: deeppink;
 text-align: center;
 font-size: 20px;
 }
@@ -98,10 +98,10 @@ padding-top: 70px;
 	text-align: center;
 }
 .visuals h1{
-	color: orange;
+	color: deeppink;
 }
 .visuals h4{
-	color: orange;
+	color: deeppink;
 	font-size: 19px;
 }
 .visuals li{
@@ -142,7 +142,7 @@ padding-top: 70px;
 
 }
 .culture ol{
-	color: orange;
+	color: deeppink;
 }
 .fruits{
 	float:left;
@@ -158,4 +158,35 @@ padding-top: 70px;
 	
 	float:left;
 	color: grey;
+}
+.confidence{
+	color: grey;
+	float: left;
+}
+h3{
+	color: deeppink;
+}
+.part1{
+ text-align:left;
+  display:block;
+  background-color: transparent;
+  border: 1px solid transparent;
+  margin-right: 10px;
+  margin-bottom: 1px;
+  float:right;
+   padding-right: 180px;
+   color: grey;	
+	
+}
+.part2{
+	 text-align:left;
+  display:block;
+  background-color: transparent;
+  border: 1px solid transparent;
+  margin-right: 10px;
+  margin-bottom: 1px;
+  float:right;
+   padding-right: 180px;
+   color: grey;
+
 }
